--- a/packages/ts-plugin/tsconfig.json
+++ b/packages/ts-plugin/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "ES2019",
+    "module": "CommonJS",
+    "target": "ESNext",
     "outDir": "build",
     "rootDir": "src",
     "strict": true,
