feat(vscode): vscode plugin implementation (stable)

--- a/examples/expo-app/tsconfig.json
+++ b/examples/expo-app/tsconfig.json
@@ -6,12 +6,7 @@
     "exactOptionalPropertyTypes": false,
     "allowJs": true,
     "resolveJsonModule": true,
-    "noEmit": true,
-    "plugins": [
-      {
-        "name": "@universal-labs/ts-styled-plugin-tw"
-      }
-    ]
+    "noEmit": true
   },
   "references": [],
   "exclude": [
