--- a/packages/vscode-extension/server/tsconfig.json
+++ b/packages/vscode-extension/server/tsconfig.json
@@ -10,6 +10,6 @@
     "outDir": "out",
     "rootDir": "src"
   },
-  "include": ["src"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", ".vscode-test"]
 }
