--- a/packages/tailwind/package.json
+++ b/packages/tailwind/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "@universal-labs/twind-native",
+  "name": "@universal-labs/twind-test-native",
   "version": "1.1.3",
+  "private": true,
   "description": "Tailwind for react native and react native web.",
   "keywords": [
     "tailwind",
