--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -17,7 +17,6 @@
   "dependencies": {
     "@ctrl/tinycolor": "3.6.0",
     "@universal-labs/twind-adapter": "workspace:*",
-    "@universal-labs/twind-native": "workspace:*",
     "@vscode/emmet-helper": "2.9.2",
     "cssbeautify": "0.3.1",
     "genex": "1.1.0",
@@ -30,6 +29,7 @@
     "vscode-languageserver-textdocument": "1.0.8"
   },
   "devDependencies": {
+    "@twind/core": "1.1.3",
     "@types/cssbeautify": "0.3.2",
     "@types/showdown": "2.0.1"
   }
