--- a/packages/vscode-extension/package.json
+++ b/packages/vscode-extension/package.json
@@ -102,6 +102,7 @@
     "vscode-languageclient": "^8.1.0"
   },
   "devDependencies": {
+    "@twind/core": "1.1.3",
     "@types/vscode": "1.80.0",
     "@vscode/test-electron": "^2.3.3",
     "vscode-test": "1.6.1"
