feat(ts-plugin): Language Service

--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -11,6 +11,7 @@
     "e2e": "mocha e2e/tests",
     "lint": "eslint src",
     "test": "vitest run",
+    "test:ui": "vitest --ui",
     "unit": "npx mocha ./build/test",
     "watch:compile": "node ./build.js --watch"
   },
