--- a/packages/vscode-extension/.vscode/launch.json
+++ b/packages/vscode-extension/.vscode/launch.json
@@ -8,7 +8,8 @@
       "name": "Launch Extension",
       "preLaunchTask": "${defaultBuildTask}",
       "args": ["--extensionDevelopmentPath=${workspaceRoot}"],
-      "outFiles": ["${workspaceRoot}/build/**/*.js"]
+      "outFiles": ["${workspaceRoot}/build/**/*.js"],
+      "sourceMaps": true
     }
   ]
 }
