--- a/packages/css/tsconfig.json
+++ b/packages/css/tsconfig.json
@@ -11,6 +11,6 @@
     "strict": true,
     "target": "esnext"
   },
-  "include": ["src", "test"],
+  "include": ["src", "test", "./*.d.ts"],
   "exclude": ["build"]
 }
