--- a/package.json
+++ b/package.json
@@ -78,5 +78,8 @@
     "vitest": "^0.31.1",
     "vitest-react-native": "^0.1.2"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "packageManager": "yarn@3.6.1"
 }
