--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -43,5 +43,8 @@
   "dependencies": {
     "@universal-labs/css": "workspace:*",
     "csstype": "3.1.2"
+  },
+  "peerDependencies": {
+    "react-native": ">=0.71.0"
   }
 }
