feat(tailwind): resolve rule

--- a/packages/native-tailwind/tsconfig.json
+++ b/packages/native-tailwind/tsconfig.json
@@ -8,6 +8,7 @@
     "noUnusedLocals": false,
     "target": "ESNext",
     "moduleResolution": "node",
+    "verbatimModuleSyntax": true,
     "moduleDetection": "auto",
     "strictFunctionTypes": false,
     "strictNullChecks": true,
