feat(tailwind): resolve styles from rules

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nx/js": "16.6.0",
     "@nx/linter": "16.6.0",
     "@rollup/plugin-terser": "^0.4.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
     "@types/chai": "4.3.5",
     "@types/glob": "^8.1.0",
     "@types/mocha": "^10.0.1",
