--- a/packages/native-tailwind/tsconfig.json
+++ b/packages/native-tailwind/tsconfig.json
@@ -17,7 +17,7 @@
     "noEmit": true,
     "strict": true,
     "stripInternal": true,
-    "noImplicitAny": false
+    "noImplicitAny": true
   },
   "exclude": ["**/old-v/**/*"]
 }
