--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -36,7 +36,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build:libs": "echo \"build...\"",
+    "build:libs": "vite build",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
