--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -22,6 +22,7 @@
     "url": "https://github.com/react-universal/tailwind",
     "directory": "packages/native-tailwind"
   },
+  "sideEffects": false,
   "main": "./build/index.cjs.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
