feat(tailwind): clean deprecated code

--- a/examples/expo-app/tsconfig.json
+++ b/examples/expo-app/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["DOM", "ESNext"],
     "exactOptionalPropertyTypes": false,
     "allowJs": true,
+    "module": "ESNext",
     "resolveJsonModule": true,
     "noEmit": true,
     "plugins": [
