--- a/packages/twind-adapter/package.json
+++ b/packages/twind-adapter/package.json
@@ -6,10 +6,7 @@
   "keywords": [
     "tailwind",
     "tailwindcss",
-    "twind",
-    "twind-native",
-    "twind-native-plugin",
-    "twind-plugin",
+    "tailwind-native",
     "tailwind-plugin",
     "react-native-web",
     "universal-labs",
