--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -6,6 +6,7 @@
     "strictFunctionTypes": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedIndexedAccess": true,
+    "verbatimModuleSyntax": true,
     "noPropertyAccessFromIndexSignature": true,
     "noImplicitReturns": true,
     "importHelpers": true,
