--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ctrl/tinycolor": "3.6.0",
     "@universal-labs/css": "workspace:*",
+    "@universal-labs/native-tailwind": "workspace:*",
     "@vscode/emmet-helper": "2.9.2",
     "cssbeautify": "0.3.1",
     "genex": "1.1.0",
