--- a/packages/vscode-extension/client/tsconfig.json
+++ b/packages/vscode-extension/client/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig",
 	"compilerOptions": {
-		"module": "commonjs",
+		"module": "ESNext",
 		"target": "es2020",
 		"lib": ["es2020"],
 		"outDir": "out",
