--- a/packages/ts-plugin/package.json
+++ b/packages/ts-plugin/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@types/cssbeautify": "0.3.2",
-    "@types/showdown": "2.0.1"
+    "@types/showdown": "2.0.1",
+    "vscode-languageserver-types": "3.17.4"
   }
 }
