--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -75,8 +75,9 @@
   "types": "./build/index.d.ts",
   "files": [
     "build",
-    "env.d.ts",
-    "react-native",
+    "tailwind.js",
+    "tailwind.d.ts",
+    "parser.d.ts",
     "LICENSE",
     "CHANGELOG.md",
     "README.md"
