--- a/packages/css/package.json
+++ b/packages/css/package.json
@@ -21,7 +21,7 @@
   "license": "MIT",
   "author": "Cristhian Gutierrez",
   "sideEffects": false,
-  "main": "./build/index.es.js",
+  "main": "./build/index.cjs.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
   "files": [
