--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -22,7 +22,7 @@
     "directory": "packages/native-tailwind"
   },
   "sideEffects": false,
-  "main": "./build/index.es.js",
+  "main": "./build/index.cjs.js",
   "module": "./build/index.es.js",
   "types": "./build/index.d.ts",
   "files": [
