--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "yarn nx run-many --target=build:libs",
+    "build:libs": "yarn nx run-many --target=build:libs --output-style=stream",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "expo:android": "yarn workspace expo-app run android",
     "expo:ios": "yarn workspace expo-app run ios",
