--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "prettier": "^2.8.3",
     "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
+    "tsup": "^7.2.0",
     "typescript": "^5.1.3",
     "vite": "^4.1.1",
     "vite-plugin-dts": "^2.2.0",
