--- a/packages/arc-parser/package.json
+++ b/packages/arc-parser/package.json
@@ -7,6 +7,7 @@
   "sideEffects": false,
   "main": "build/index.cjs.js",
   "module": "build/index.es.js",
+  "types": "build/index.d.ts",
   "scripts": {
     "build:libs": "vite build",
     "lint": "eslint \"./**/*.{ts,tsx}\"",
