break(packages): ssr fixes

--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -37,6 +37,7 @@
   ],
   "scripts": {
     "build:libs": "vite build",
+    "libs:dev": "tsc -p . --watch",
     "test": "vitest run",
     "test:ui": "vitest --ui"
   },
