--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "expo:ios": "yarn workspace expo-app run ios",
     "expo:start": "yarn workspace expo-app run start",
     "format": "prettier --write packages apps examples \"**/*.{js,ts,tsx,md}\"",
-    "libs:dev": "nx watch --projects=styled,css,twind-adapter -- nx run \\$NX_PROJECT_NAME:build:libs",
+    "libs:dev": "nx watch --all -- nx run \\$NX_PROJECT_NAME:build:libs",
     "libs:foreach": "yarn workspaces foreach --no-private --verbose",
     "lint": "npx nx run-many --target=lint",
     "plugin:dev": "nx run-many --target vscode:dev --parallel --output-style=dynamic",
