--- a/examples/expo-app/package.json
+++ b/examples/expo-app/package.json
@@ -18,7 +18,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.5",
     "react-native-reanimated": "~3.3.0",
     "react-native-svg": "13.9.0",
     "react-native-uuid": "^2.0.1",
@@ -31,6 +31,6 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.0.10",
     "babel-plugin-module-resolver": "^5.0.0",
-    "typescript": "5.1.6"
+    "typescript": "^5.1.3"
   }
 }
