break(packages): stable tw config

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -22,6 +22,7 @@
     "exactOptionalPropertyTypes": false,
     "noImplicitOverride": true,
     "noUnusedLocals": true,
-    "isolatedModules": false
+    "isolatedModules": false,
+    "downlevelIteration": true
   }
 }
