--- a/examples/next-app/package.json
+++ b/examples/next-app/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.10",
   "private": true,
   "scripts": {
-    "build": "next build",
+    "build-next-example": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
