--- a/examples/next-app-dir/package.json
+++ b/examples/next-app-dir/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "next-app",
-  "version": "1.4.10",
+  "name": "next-app-dir",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build-next-example": "next build",
+    "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@next/font": "13.0.6",
     "@universal-labs/native-twin": "workspace:*",
     "@universal-labs/native-twin-nextjs": "workspace:*",
     "@universal-labs/preset-tailwind": "workspace:*",
@@ -18,5 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native-web": "^0.19.6"
+  },
+  "devDependencies": {
+    "typescript": "^5.2.2"
   }
 }
