--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build:libs": "yarn nx run-many --target=build:libs --output-style=stream",
+    "build:libs": "turbo run build --filter='./packages/css'",
     "build:release": "yarn build:libs && yarn libs:foreach pack && yarn libs:foreach exec \"mkdir _release && tar zxvf package.tgz --directory _release && rm package.tgz\"",
     "expo:android": "yarn workspace expo-app run android",
     "expo:ios": "yarn workspace expo-app run ios",
@@ -34,22 +34,18 @@
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.8",
     "@changesets/cli": "^2.26.0",
-    "@nx/devkit": "16.6.0",
-    "@nx/eslint-plugin": "16.6.0",
-    "@nx/js": "16.6.0",
-    "@nx/linter": "16.6.0",
     "@rollup/plugin-terser": "^0.4.1",
+    "@testing-library/react-native": "^12.0.1",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "@tsconfig/react-native": "^3.0.2",
     "@types/chai": "4.3.5",
     "@types/glob": "^8.1.0",
+    "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "20.2.5",
     "@types/react-test-renderer": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "5.62.0",
     "@typescript-eslint/parser": "5.62.0",
-    "@vitejs/plugin-react-swc": "^3.3.2",
-    "@vitest/coverage-istanbul": "^0.31.1",
-    "@vitest/ui": "^0.31.1",
     "@vscode/test-electron": "^2.3.2",
     "chai": "4.3.7",
     "concurrently": "^7.6.0",
@@ -62,20 +58,14 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "glob": "^8.1.0",
-    "happy-dom": "latest",
-    "jsdom": "latest",
+    "jest": "^29.3.1",
+    "jest-expo": "^49.0.0",
     "mocha": "^10.2.0",
-    "nx": "16.6.0",
-    "nx-cloud": "16.2.0",
     "prettier": "^2.8.3",
     "react-test-renderer": "18.2.0",
     "tslib": "^2.6.0",
-    "typescript": "^5.2.2",
-    "vite": "^4.1.1",
-    "vite-plugin-dts": "^2.2.0",
-    "vite-plugin-multiple": "0.2.0",
-    "vitest": "^0.31.1",
-    "vitest-react-native": "^0.1.2"
+    "turbo": "^1.10.16",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18"
