--- a/packages/native-tailwind-nextjs/package.json
+++ b/packages/native-tailwind-nextjs/package.json
@@ -57,7 +57,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
+    "build": "tsc -p .",
     "test": "echo \"NO_TEST\"",
     "test:ui": "vitest --ui"
   },
