--- a/packages/native-tailwind/package.json
+++ b/packages/native-tailwind/package.json
@@ -36,7 +36,7 @@
     "CHANGELOG.md"
   ],
   "scripts": {
-    "build:libs": "vite build",
+    "build": "tsc -p .",
     "libs:dev": "tsc -p . --watch",
     "test": "vitest run",
     "test:ui": "vitest --ui"
